# rust-technical-assessment

./: .cursorrules  .env.example  .gitignore  BRAVE_SEARCH_SETUP.md  Cargo.toml  DEFAULT_ADDRESSES.md  FEEDBACK.md  IMPLEMENTATION.md  NOTES.md  PRD.md  RAG_IMPLEMENTATION.md  README.md  TESTING.md  test_swap_intent.sh  test_tools.sh  test_usdc_direct.rs
baml/: Cargo.toml  README.md
baml/baml_src/: agent.baml  clients.baml  doc_ingestion.baml  generators.baml  lib.rs  models.baml  resume.baml  tests.baml  uniswap.baml
baml/baml_src/examples/: resume_demo.rs
docs/: PRD.md
docs/uniswap/v2/contracts/: UniswapV2Pair.sol
docs/uniswap/v2/docs/: core-concepts.md  flash-swaps.md  overview.md  slippage.md
mcp-server/: Cargo.toml  TESTING.md
mcp-server/src/: blockchain_server.rs  blockchain_service.rs  combined_service.rs  config.rs  lib.rs  main.rs  server.rs
mcp-server/src/services/: blockchain.rs  mod.rs  search.rs
mcp-server/tests/: README.md  account_loading_tests.rs  address_validation_tests.rs  brave_api_tests.rs  integration_tests.rs  request_structure_tests.rs  server_tests.rs  service_creation_tests.rs  swap_tests.rs  test_usdc_direct.rs  token_balance_tests.rs
rig-client/: Cargo.toml  README.md
rig-client/examples/: resume_demo.rs
rig-client/src/: agent.rs  blockchain_agent.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  rag.rs
rig-client/src/doc_ingestion/: mod.rs  store.rs  uniswap.rs
rig-client/src/doc_ingestion/sources/: uniswap.rs
rig-client/tests/: README.md  query_classification_test.rs  rag_logic_test.rs  rag_tests.rs  test_rag.sh
scripts/: setup_uniswap_docs.sh  update_uniswap_docs.py
scripts/tests/: Cargo.toml  run_all.sh  test_complete_system.sh  test_default_addresses.sh  test_formatting.sh  test_rig_client.sh  test_swap_intent.sh
