[package]
name = "baml"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
baml-runtime = "0.1"
baml-types = "0.1"

[[example]]
name = "resume_demo"
path = "src/examples/resume_demo.rs"