[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true

[dependencies]
# MCP Framework
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = [
    "server",
    "macros", 
    "transport-io",
    "schemars"
] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# JSON handling
serde.workspace = true
serde_json.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Schema generation
schemars = "1.0"

# Ethereum/Cast integration
alloy-primitives = "0.8"
reqwest = { version = "0.11", features = ["json"] }
