[package]
name = "rig-client"
version.workspace = true
edition.workspace = true

[dependencies]
# RIG Framework with Anthropic support  
rig-core = { version = "0.18.2", features = ["rmcp", "derive"] }
# MCP Protocol support - use same version as RIG expects
rmcp = { version = "0.5", features = ["client", "transport-streamable-http-client", "reqwest"] }
# HTTP client for MCP communication
reqwest = { version = "0.11", features = ["json"] }
# Async runtime
tokio.workspace = true
# CLI framework
clap = { version = "4.4", features = ["derive"] }
# Error handling
anyhow.workspace = true
thiserror.workspace = true
# JSON handling
serde.workspace = true
serde_json.workspace = true
# Environment variables
dotenv = "0.15"
# Terminal input/output
rustyline = "14.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# RAG and Vector Store support
rig-fastembed = "0.2.9"
# File system operations for document loading
walkdir = "2.4"
# UUID generation for document IDs
uuid = { version = "1.6", features = ["v4"] }
# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
