[package]
name = "test-scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_usdc_direct"
path = "test_usdc_direct.rs"

[dependencies]
alloy-primitives = "0.1"
alloy-provider = "0.1"
alloy-network = "0.1"
alloy-rpc-types = "0.1"
alloy-serde = "0.1"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
